Remove overflow hidden Should fix the issues with the iphone keyboard on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,6 @@ body {
   color: #666172;
   font-size: 1.4rem;
   height: 100vh;
-  overflow: hidden;
 
   background: #8f9192;  /* fallback for old browsers */
   background: -webkit-linear-gradient('to bottom, #8f9192, #b6b9bb, #ffffff');
