--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -84,6 +84,8 @@
         padding: .2rem;
         font-family: 'Source Sans Pro', sans-serif;
         letter-spacing: 1px;
+        border: #726361 solid 1px;
+        border-radius: 4px;
       }
       #modal-submit {
         border-radius: 1rem;
